--- a/src/app/orbit-counts/orbit-counts.component.html
+++ b/src/app/orbit-counts/orbit-counts.component.html
@@ -1,6 +1,9 @@
 <h3>Satellite Count:</h3>
 <div class="counts">
-	<div>Total: <span class="counts-total">NaN</span></div>
-</div>
-
+	<div>Total: <span class="counts-total">*ngFor="let category of categories">{{ category}}</span></div>
+<!--<div> *ngFor="let category of categories">{{ category}}-->
+<span class = "counts-total">{{countyByType(category.substring(0, category.length - 1))}}</span>
 <!-- TODO 4: add logic to count number of satellites displayed -->
+<div>
+	
+</div>
