--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -6,25 +6,24 @@
         <th>Orbit Type</th>
         <th>Launch Date</th>
     </tr>
-    <tr class="data-row" *ngFor="let newRow of satellites ">
-            <td>{{newRow.name}}</td>
-            <td>{{newRow.type}}</td>
-            <td>{{newRow.operational}}</td>
-            <td>{{newRow.orbitType}}</td>
-            <td>{{newRow.launchDate}}</td>
-         </tr>
+    <tr class="data-row" *ngFor = "let satellite of satellites " [class.allElse]= "allElse(satellite)">
+            <td *ngIf = "class.warning=satellite.isSpaceDebris()">{{satellite.type}}></td> <!--[class.warning]="isSpaceDebris(satellite.type)">-->
+            <td>{{satellite.name}}</td>
+            <td>{{satellite.operational}}</td>
+            <td>{{satellite.orbitType}}</td>
+            <td>{{satellite.launchDate}}</td>
+         <!--</tr>
         <td>GPS 938</td>
         <td>Positioning</td>
         <td>true</td>
         <td>HIGH</td>
-        <td>2001-11-01</td>
+        <td>2001-11-01</td> 
         
-        </tr>
+        </tr>-->
 </table>
 
 <!-- TODO 2b: use *ngFor to display satellite data in the table -->
 
-
-
 <!-- TODO 3b: add style directive to conditionally highlight satellite type -->
 
+<!--ng-style?-->
