--- a/src/app/orbit-counts/orbit-counts.component.html
+++ b/src/app/orbit-counts/orbit-counts.component.html
@@ -1,9 +1,11 @@
 <h3>Satellite Count:</h3>
 <div class="counts">
-	<div>Total: <span class="counts-total">*ngFor="let category of categories">{{ category}}</span></div>
+	<div>Total: <span class="counts-total">{{ satellites.length}}</span></div>
 <!--<div> *ngFor="let category of categories">{{ category}}-->
-<span class = "counts-total">{{countyByType(category.substring(0, category.length - 1))}}</span>
+<!--<span class = "counts-total"></span>-->
 <!-- TODO 4: add logic to count number of satellites displayed -->
 <div>
 	
 </div>
+<!--line 3*ngFor="let category of categories">-->
+<!--line 5{{countyByType(category.substring(0, category.length - 1))}}-->
