--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -6,9 +6,9 @@
         <th>Orbit Type</th>
         <th>Launch Date</th>
     </tr>
-    <tr class="data-row" *ngFor = "let satellite of satellites " [class.allElse]= "allElse(satellite)">
-            <td *ngIf = "class.warning=satellite.isSpaceDebris()">{{satellite.type}}></td> <!--[class.warning]="isSpaceDebris(satellite.type)">-->
+    <tr class="data-row"  *ngFor = "let satellite of satellites ">
             <td>{{satellite.name}}</td>
+            <td [class.warning]="satellite.isSpaceDebris()">{{satellite.type}}</td> 
             <td>{{satellite.operational}}</td>
             <td>{{satellite.orbitType}}</td>
             <td>{{satellite.launchDate}}</td>
@@ -27,3 +27,4 @@
 <!-- TODO 3b: add style directive to conditionally highlight satellite type -->
 
 <!--ng-style?-->
+<!-- line 9[class.allElse]= "allElse(satellite)"-->
